baml_language/crates/baml_tests/snapshots/diagnostic_errors/json_static_method_arity/baml_tests__diagnostic_errors__json_static_method_arity__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Box {
  value: user.T
}
function user.bad_extra(j: baml.json.json) -> user.Box<int>  [expr] {
  {  } Box.from_json(j)
}
function user.bad_missing(j: baml.json.json) -> user.Box<int>  [expr] {
  {  } Box.from_json(j)
}
function user.from_json(j: baml.json.json) -> user.Box<user.T>  [expr] {
  {  } user.Box { value: baml.json.from_json(baml.json.field(j, "value")) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": baml.json.to_json(self.value) }
}
