baml_language/crates/baml_tests/snapshots/diagnostic_errors/json_static_method_arity/baml_tests__diagnostic_errors__json_static_method_arity__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
  value: T
}
function user.Box.from_json(j: baml.json.json) -> user.Box<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : user.Box<T>
    Box { value: baml.json.from_json<T>(baml.json.field(j, "value")) } : user.Box<T>
  }
}
function user.Box.to_json(self: user.Box) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "value": baml.json.to_json(self.value) } : map<string, baml.json.json>
}
function user.bad_missing(j: baml.json.json) -> user.Box<int> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : user.Box<int>
    Box.from_json(j) : user.Box<int>
  }
}
function user.bad_extra(j: baml.json.json) -> user.Box<int> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : user.Box<int>
    Box.from_json(j) : user.Box<int>
  }
  !! 1498..1532: function `from_json` expects 1 type argument(s), got 2
}
class user.Box$stream {
  value: null | unknown
}
